Sepearted functions into headers and separate source files for easier viewing of code. Made main function a lot cleaner and easier to read.

--- a/Interactive Story II - It's Story Time/Interactive Story II - It's Story Time.vcxproj.filters
+++ b/Interactive Story II - It's Story Time/Interactive Story II - It's Story Time.vcxproj.filters
@@ -18,5 +18,19 @@
     <ClCompile Include="Source.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="userInput.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="storyFunctions.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="userInput.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="storyFunctions.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
